# SQLparse

./: .gitignore  README.md  pyproject.toml
src/sql_lineage/: __init__.py  analyzer.py  cli.py  collectors.py  context.py  context_builder.py  dialects.py  exporters.py  graph.py  graph_utils.py  lineage.py  lineage_builder.py  models.py  parser.py
tests/: test_clickhouse_complex.py  test_clickhouse_query.py  test_exporters.py  test_graph_er_columns.py  test_graph_full.py  test_graph_tables_only.py  test_multi_statement.py  test_mysql_complex.py  test_postgres_complex.py  test_spark_complex.py
tests/fixtures/: clickhouse_complex.sql  mysql_complex.sql  postgres_complex.sql  spark_complex.sql
